openshift/simple-noauth/route-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-registry-ui
  # TODO add the annotation as an overlay patch
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: apicurio-registry
    template: apicurio-registry-ui
spec:
  host: registry.cluster.openshift.com
  to:
    kind: Service
    name: apicurio-registry-ui
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
